--- a/MobileFinanceErp/Web.config
+++ b/MobileFinanceErp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-5HA2I5F;Initial Catalog=MobileERP;Persist Security Info=True;User ID=sa;Password=1234;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-5HA2I5F;Initial Catalog=MovileErpNew;Persist Security Info=True;User ID=sa;Password=1234;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
