Added dropdown helper

--- a/MobileFinanceErp/MobileFinanceErp.csproj
+++ b/MobileFinanceErp/MobileFinanceErp.csproj
@@ -214,6 +214,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\DataTableGrid.cs" />
+    <Compile Include="HtmlHelpers\KendoDropdownHelper.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\BrandModel.cs" />
